fix firefox artist images rollover z-index issue

--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -188,7 +188,6 @@ h1, h2, h3, h4{
 
 #loading-image {
   margin-top: 25%;
-  z-index: 100;
   width: 30px;
   height: 30px;
 }
@@ -202,7 +201,7 @@ h1, h2, h3, h4{
     height: 50px;
     background: url(../../images/close.gif) no-repeat center center;
     background-size: 100%;
-    z-index: 9999999999;
+    z-index: 9999;
     &:hover{
         background: url(../../images/close-black.gif) no-repeat center center;
         background-size: 100%;
@@ -354,7 +353,7 @@ nav{
     font-weight: 800;
     font-size: 1.5em;
     text-transform: uppercase;
-    z-index: 9;
+    z-index: 99;
     color: white;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
@@ -419,7 +418,7 @@ nav{
     top: -100%;
     width: 100%;
     height: 100%;
-    z-index: 9999;
+    z-index: 9998;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     -ms-transition: all .2s ease-in-out;
@@ -446,17 +445,14 @@ nav{
     background-size: 100% !important;
     background-size: bottom center;
     min-width: 100%;
+    min-height: 100%;
     background: url(../../images/title-image.jpg) no-repeat center center;
-    -webkit-background-size: contain;
-    -moz-background-size: contain;
-    -o-background-size: contain;
-    -ms-background-size: contain;
-    background-size: contain;
-    -webkit-transition: all .4s ease-in-out;
-    -moz-transition: all .4s ease-in-out;
-    -o-transition: all .4s ease-in-out;
-    -ms-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
+    background-size: 120%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    -ms-background-size: cover;
+    background-size: cover;
     color: white;
     img{
         width: 40%;
@@ -517,8 +513,13 @@ nav{
     width: 100%;
     height: 100%;
     background-color: black;
-    background: url(../../images/countdown-title.jpg) no-repeat center center;
+    background: url(../../images/countdown-title.jpg) no-repeat top center;
     background-size: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -ms-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     color: white;
     border-top: 1px solid white;
     text-align: center;
@@ -552,7 +553,7 @@ nav{
         left: 10%;
         right: 10%;
         position: absolute;
-        z-index: 9;
+        z-index: 2;
         h1{
             text-transform: none;
             font-size: 4em;
@@ -595,7 +596,6 @@ nav{
         height: 100%;
         width: 100%;
         margin: 0 0 0 0;
-        z-index: 0;
         position: absolute;
         iframe{
             opacity: 1;
@@ -623,14 +623,18 @@ nav{
     color: white;
     font-family: 'Rail', helvetica, sans-serif;
     margin: 0;
+
     h1, h2, h3, h4, a{
         color: white;
     }
     .artist-list{
         width: 100%;
         margin: 0;
+        left: 0;
         text-align: center;
-        z-index: 2;
+        position: absolute;
+        top: 0;
+        z-index: 9;
         h1{
             text-align: center;
             font-size: 4em;
@@ -665,14 +669,14 @@ nav{
         }
     }
     .artist-images{
-        display: none;
+        display: block;
         width: 100%;
         height: 100%;
         position: absolute;
         left: 0;
         top: 0;
         overflow: hidden;
-        z-index: -1;
+        z-index: 0;
         img{
             width: 100%;
         }
@@ -966,7 +970,7 @@ nav{
         left: 0;
         top: 0;
         overflow: hidden;
-        z-index: -1;
+        z-index: 1;
         img{
             width: 100%;
         }
